--- a/src/App.css
+++ b/src/App.css
@@ -1,182 +1,17 @@
 #root {
   display: flex;
-}
-
-.main {
-  display: flex;
-  flex-grow: 1;
-}
-
-.navbar.custom-nav {
   height: 100vh;
-  padding: 20px;
-  background-color: #08090a;
+}
+
+.table-container {
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
-  justify-content: start;
-  gap: 10px;
+  margin: 30px;
 }
 
-.custom-brand {
-  color: #ffffff;
-  font-size: 24px;
-  font-weight: bold;
-  margin-bottom: 6px;
-}
-
-.nav {
-  list-style: none;
-  padding: 0;
-  margin: 0;
-  width: 100%;
-}
-
-.nav-item {
-  margin-bottom: 10px;
-}
-
-.nav-link {
-  color: #f4faff;
-  font-weight: bold;
-  text-decoration: none;
-  padding: 10px;
-  display: block;
-  width: 100%;
-  border-radius: 4px;
-}
-
-.nav-link:hover {
-  color: #0d6efd;
-  background-color: rgba(13, 110, 253, 0.1);
-}
-
-.nav-link:active {
-  background-color: rgba(13, 110, 253, 0.2);
-}
-
-.hero-side {
+.modal-button-container {
   display: flex;
-  flex-direction: column;
-  flex-grow: 1;
-  padding: 20px;
-}
-
-.hero-h4 {
-  margin-bottom: 18px;
-}
-
-/* Table styles*/
-.table {
-  width: 100%;
-  border-collapse: collapse;
-  margin-bottom: 20px;
-  font-size: 16px;
-  color: #333;
-}
-
-.table th,
-.table td {
-  border: 1px solid #ddd;
-  padding: 8px;
-  text-align: left;
-}
-
-.table th {
-  background-color: #f4faff;
-  font-weight: bold;
-}
-
-.table tbody tr:nth-child(even) {
-  background-color: #f9f9f9;
-}
-
-.table tbody tr:hover {
-  background-color: #f1f1f1;
-}
-
-.status {
-  padding: 5px 10px;
-  border-radius: 4px;
-  text-align: center;
-  color: #fff;
-}
-
-.status.active {
-  background-color: #28a745;
-}
-
-.status.inactive {
-  background-color: #dc3545;
-}
-
-.table td:last-child {
-  text-align: center;
-}
-
-/* Modal styles */
-.modal-overlay {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: rgba(0, 0, 0, 0.5);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.modal-content.custom-modal {
-  background: white;
-  padding: 20px;
-  border-radius: 8px;
-  width: 550px;
-  max-width: 90%;
-  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-}
-
-.modal-header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  margin-bottom: 20px;
-}
-
-.modal-title {
-  margin: 0;
-}
-
-.close-button {
-  background: none;
-  border: none;
-  font-size: 20px;
-  cursor: pointer;
-}
-
-.modal-body {
-  padding: 10px 0;
-}
-
-.form-group {
-  margin-bottom: 15px;
-}
-
-.form-control {
-  width: 100%;
-  padding: 8px;
-  box-sizing: border-box;
-}
-
-.btn {
-  padding: 10px 20px;
-  background-color: #0d6efd;
-  color: white;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
-}
-
-.btn-primary:hover {
-  background-color: #0056b3;
+  justify-content: end;
+  margin-top: 30px;
+  gap: 8px;
 }
