--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 #root {
   display: flex;
   height: 100vh;
+  position: fixed;
 }
 
 .login-container {
@@ -16,8 +17,10 @@
   padding-left: 40px;
 }
 
-.table-container {
-  margin: 30px;
+.dashboard-container {
+  margin: 20px;
+  max-width: 75%;
+  max-height: 10%;
 }
 
 .modal-button-container {
